--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,18 @@ variables:
   workspaceDir: knotx-repos
 
 steps:
+  - task: Gradle@2
+    inputs:
+      workingDirectory: ''
+      gradleWrapperFile: 'gradlew'
+      gradleOptions: '-Xmx3072m'
+      javaHomeOption: 'JDKVersion'
+      jdkVersionOption: '1.8'
+      jdkArchitectureOption: 'x64'
+      publishJUnitResults: true
+      testResultsFiles: '**/TEST-*.xml'
+      tasks: 'build'
+    displayName: "Build Gradle Plugins"
   - script: |
       git clone https://github.com/Knotx/knotx-aggregator.git
       mkdir $(workspaceDir)
@@ -36,11 +48,6 @@ steps:
           ./pull-all.sh -r ../../$(workspaceDir) -b $(System.PullRequest.SourceBranch) -a
         fi
     displayName: "Clone all repositories"
-  - task: Maven@3
-    inputs:
-      mavenPomFile: '$(workspaceDir)/knotx-dependencies/pom.xml'
-      goals: 'install'
-    displayName: "Build Dependencies"
   - task: Gradle@2
     inputs:
       gradleWrapperFile: '$(workspaceDir)/knotx-stack/gradlew'
@@ -53,10 +60,11 @@ steps:
       workingDirectory: '$(workspaceDir)/knotx-stack'
       tasks: 'build'
     displayName: "Build Stack"
-  - task: Maven@3
+  - task: Gradle@2
     inputs:
-      mavenPomFile: '$(workspaceDir)/knotx-docker/pom.xml'
-      goals: 'package'
+      gradleWrapperFile: '$(workspaceDir)/knotx-docker/gradlew'
+      workingDirectory: '$(workspaceDir)/knotx-docker'
+      tasks: 'build'
     displayName: "Build Docker image"
   - task: Gradle@2
     inputs:
