Update Azure Pipelines configuration

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,18 +22,6 @@ variables:
   workspaceDir: knotx-repos
 
 steps:
-  - task: Gradle@2
-    inputs:
-      workingDirectory: ''
-      gradleWrapperFile: 'gradlew'
-      gradleOptions: '-Xmx3072m'
-      javaHomeOption: 'JDKVersion'
-      jdkVersionOption: '1.8'
-      jdkArchitectureOption: 'x64'
-      publishJUnitResults: true
-      testResultsFiles: '**/TEST-*.xml'
-      tasks: 'build'
-    displayName: "Build Gradle Plugins"
   - script: |
       git clone https://github.com/Knotx/knotx-aggregator.git
       mkdir $(workspaceDir)
@@ -41,11 +29,12 @@ steps:
   - task: CmdLine@2
     inputs:
       script: |
+        ORGANIZATION=$(cut -d'/' -f1 <<<$(Build.Repository.Name))
         cd knotx-aggregator/development
         if [[ -z "$(System.PullRequest.SourceBranch)" ]] ; then
-          ./pull-all.sh -r ../../$(workspaceDir) -b "$(Build.SourceBranchName)" -a
+          ./pull-all.sh -r ../../$(workspaceDir) -b "$(Build.SourceBranchName)" -a -o $ORGANIZATION
         else
-          ./pull-all.sh -r ../../$(workspaceDir) -b $(System.PullRequest.SourceBranch) -a
+          ./pull-all.sh -r ../../$(workspaceDir) -b $(System.PullRequest.SourceBranch) -a -o $ORGANIZATION
         fi
     displayName: "Clone all repositories"
   - task: Gradle@2
