Update Azure Pipelines configuration.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,18 +22,6 @@ variables:
   workspaceDir: knotx-repos
 
 steps:
-  - task: Gradle@2
-    inputs:
-      workingDirectory: ''
-      gradleWrapperFile: 'gradlew'
-      gradleOptions: '-Xmx3072m'
-      javaHomeOption: 'JDKVersion'
-      jdkVersionOption: '1.8'
-      jdkArchitectureOption: 'x64'
-      publishJUnitResults: true
-      testResultsFiles: '**/TEST-*.xml'
-      tasks: 'build'
-    displayName: "Build Gradle Plugins"
   - script: |
       git clone https://github.com/Knotx/knotx-aggregator.git
       mkdir $(workspaceDir)
@@ -41,11 +29,15 @@ steps:
   - task: CmdLine@2
     inputs:
       script: |
+        PR_NO=$(System.PullRequest.PullRequestNumber)
+        REPO_NAME=$(Build.Repository.Name)
+        LABEL=$(curl https://api.github.com/repos/$REPO_NAME/pulls/$PR_NO | jq --raw-output '.head.label')
+        ORGANIZATION=$(cut -d':' -f1 <<<$LABEL)
         cd knotx-aggregator/development
         if [[ -z "$(System.PullRequest.SourceBranch)" ]] ; then
-          ./pull-all.sh -r ../../$(workspaceDir) -b "$(Build.SourceBranchName)" -a
+          ./pull-all.sh -r ../../$(workspaceDir) -b "$(Build.SourceBranchName)" -a -o $ORGANIZATION
         else
-          ./pull-all.sh -r ../../$(workspaceDir) -b $(System.PullRequest.SourceBranch) -a
+          ./pull-all.sh -r ../../$(workspaceDir) -b $(System.PullRequest.SourceBranch) -a -o $ORGANIZATION
         fi
     displayName: "Clone all repositories"
   - task: Gradle@2
