--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,11 @@
 trigger:
   - master
 
+pr:
+  branches:
+    include:
+      - '*'
+
 pool:
   vmImage: 'ubuntu-latest'
 
@@ -22,18 +27,6 @@ variables:
   workspaceDir: knotx-repos
 
 steps:
-  - task: Gradle@2	
-    inputs:	
-      workingDirectory: ''	
-      gradleWrapperFile: 'gradlew'	
-      gradleOptions: '-Xmx3072m'	
-      javaHomeOption: 'JDKVersion'	
-      jdkVersionOption: '1.8'	
-      jdkArchitectureOption: 'x64'	
-      publishJUnitResults: true	
-      testResultsFiles: '**/TEST-*.xml'	
-      tasks: 'build'	
-    displayName: "Build Gradle Plugins"
   - script: |
       git clone https://github.com/Knotx/knotx-aggregator.git
       mkdir $(workspaceDir)
